[package]
name = "mmr"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = [
  "derive",
  "std",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = { version = "1.0.140", default-features = false }
ureq = { version = "3.0.12", features = ["json"], default-features = false }

[build-dependencies]
anyhow = "1.0.98"
vergen-git2 = "1.0.7"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
