[package]
name = "mmr"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
serde_json = { version = "1.0.140", default-features = false }
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.22", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
tokio = { version = "1.46.0", features = [
  "rt-multi-thread",
  "macros",
], default-features = false }

[build-dependencies]
anyhow = "1.0.98"
vergen-git2 = "1.0.7"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
